chore: bump vulnerable dependencies across monorepo (#764)
* chore: bump vulnerable dependencies across monorepo

Bump minimum versions for packages with known security vulnerabilities
flagged by Dependabot. Regenerate all lockfiles and run uv sync/npm install.

Python:
- pillow >=12.1.1 (CVE: out-of-bounds write on PSD images)
- protobuf >=6.33.5 (JSON recursion depth bypass)
- python-multipart >=0.0.22 (arbitrary file write)
- filelock >=3.20.3 (TOCTOU symlink vulnerability)
- virtualenv >=20.36.1 (TOCTOU in directory creation)
- torch >=2.6.0 (torch.load RCE, critical)
- aiohttp >=3.13.3, urllib3 >=2.6.3, starlette >=0.49.1

npm:
- axios ^1.13.5 (DoS via __proto__ key in mergeConfig)

Also adds pillow override in runtime to bypass surya-ocr's
pillow<11 cap, and drops Intel Mac torch override (PyTorch
dropped Intel Mac support after 2.2.2).

* fix: relax filelock pin to fix binary E2E resolution failure

The PyTorch CPU index only has filelock<=3.20.0. When the PyApp binary
runs uv with UV_EXTRA_INDEX_URL pointing to the PyTorch index, uv's
default first-match strategy resolves filelock from there and can't
satisfy >=3.20.3. Relax to >=3.16.1 which the PyTorch index can satisfy.

* chore: update uv lock

--- a/common/pyproject.toml
+++ b/common/pyproject.toml
@@ -6,7 +6,7 @@ requires-python = ">=3.10"
 dependencies = [
     "huggingface_hub>=0.24.0",
     "hf-transfer>=0.1.9",  # High-speed downloads (set HF_HUB_ENABLE_HF_TRANSFER=1)
-    "filelock>=3.16.1",
+    "filelock>=3.16.1",  # Pinned <=3.20.0 by PyTorch CPU index; don't raise above
 ]
 
 [project.optional-dependencies]
