--- a/runtimes/universal/pyproject.toml
+++ b/runtimes/universal/pyproject.toml
@@ -43,6 +43,10 @@ dependencies = [
   "easyocr>=1.7.0",
   "opencv-python-headless>=4.8.0",
   "pytesseract>=0.3.10",
+  "ultralytics>=8.4.14",
+  "onnx>=1.12.0,<2.0.0",
+  "onnxslim>=0.1.85",
+  "onnxruntime>=1.23.2",
 ]
 
 [dependency-groups]
